fix: skills and projects overflow

--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -10,6 +10,7 @@
     color: orange;
     font-size: 36px;
     z-index: 999;
+    background-color: #1d1f21;
 
     @include mobile {
       z-index: -1;
@@ -20,10 +21,6 @@
     .progressBar {
       height: 10px;
       background-color: #fff;
-    }
-
-    h1 {
-      background: linear-gradient(45deg, transparent, #131416, transparent);
     }
   }
 
